daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N24_bad_private_payload_encoding/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658400839e823f71ca647da1566f13a984d8c67642e9e3d360993acd97097ed47b2fc598b6090fa5103e81f12efd8aa1530b68d76f8d5a8e34c23a9b2388d1b20fccf
